--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Figma-Land by Ursu Maxim </title>
     <link rel="stylesheet" href="style.css">
-    <title>My layout by Ursu Maxim</title>
 </head>
 
 <body>
@@ -41,6 +41,7 @@
             </div>
         </section>
     </header>
+
     <main class="main-features">
         <section class="featurees">
             <div class="title_features">features</div>
@@ -167,7 +168,145 @@
         </section>
     </main>
 
+    <main class="main-partners">
+        <section class="partners">
+            <div class="partners-title">Partners</div>
+            <div class="partners-subtitle">We focus on ergonomics and meeting you where you work. It's only a keystroke
+                away.</div>
+            <div class="logo-partners">
+                <img src="Logos/logos_apple-app-store.svg" alt="logo1">
+                <img src="Logos/logos_apiary.svg" alt="logo2">
+                <img src="Logos/logos_android-icon.svg" alt="logo3">
+                <img src="Logos/logos_basecamp.svg" alt="logo4">
+                <img src="Logos/logos_airbnb.svg" alt="logo5">
+                <img src="Logos/logos_ibm.svg" alt="logo6">
+            </div>
+            <div class="partners-button">
+                <a href="#" class="partners-button">
+                    All Partners
+                </a>
+            </div>
+        </section>
+    </main>
 
+    <main class="main-testimonials">
+        <section class="testimonials">
+            <div class="testimonials-title">
+                Testimonials
+            </div>
+            <div class="testimonials-comments">
+                <div class="comment1">
+                    <div class="about-user">
+                        <img src="images/users/Ellipse 2.png" alt="photo1" class="comment1">
+                        <div class="name">Claire Bell Designer</div>
+                    </div>
+                    <div class="box-comment">
+                        <div class="comment-text">
+                            Slate helps you see how many more days you need to work to reach your financial goal for the
+                            month and year. Slate helps you see how many more days you need to work to reach your
+                            financial goal for the month and year.your financial goal for the month and year.
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="comment2">
+                    <div class="about-user">
+                        <img src="images/users/Ellipse 2 (1).png" alt="photo2" class="comment1">
+                        <div class="name">Ursu Maxim Developer</div>
+                    </div>
+                    <div class="box-comment">
+                        <div class="comment-text">
+                            Slate helps you see how many more days you need to work to reach your financial goal for the
+                            month and year. Slate helps you see how many more days you need to work to reach your
+                            financial goal for the month and year.your financial goal for the month and year.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="comment3">
+                    <div class="about-user">
+                        <img src="images/users/Ellipse 2 (2).png" alt="photo3" class="comment1">
+                        <div class="name">Lesnic Dumitru Designer</div>
+                    </div>
+                    <div class="box-comment">
+                        <div class="comment-text">
+                            Slate helps you see how many more days you need to work to reach your financial goal for the
+                            month and year. Slate helps you see how many more days you need to work to reach your
+                            financial goal for the month and year.your financial goal for the month and year.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="comment4">
+                    <div class="about-user">
+                        <img src="images/users/Ellipse 2 (3).png" alt="photo4" class="comment1">
+                        <div class="name">Petrov Vlad Designer</div>
+                    </div>
+                    <div class="box-comment">
+                        <div class="comment-text">
+                            Slate helps you see how many more days you need to work to reach your financial goal for the
+                            month and year. Slate helps you see how many more days you need to work to reach your
+                            financial goal for the month and year.your financial goal for the month and year.
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="footer__links">
+            <div class="links">
+                <p class="link__title">Fingertipe</p>
+                <a href="#">Home</a>
+                <a href="#">Examples</a>
+                <a href="#">Pricing</a>
+                <a href="#">Updates</a>
+            </div>
+            <div class="links">
+                <p class="link__title">Resources</p>
+                <a href="#">Home</a>
+                <a href="#">Examples</a>
+                <a href="#">Pricing</a>
+                <a href="#">Updates</a>
+            </div>
+            <div class="links">
+                <p class="link__title">About</p>
+                <a href="#">Home</a>
+                <a href="#">Examples</a>
+                <a href="#">Pricing</a>
+                <a href="#">Updates</a>
+            </div>
+        </div>
+
+        <div class="footer__info">
+            <div class="info__location">
+                <img src="Logos/footer/Vector (1).svg">
+                Universitatea "Aleco Russo" din Balti
+            </div>
+            <div class="info__phone">
+                <img src="Logos/footer/Vector2.svg">
+                (373) 76063004
+            </div>
+            <div class="info__logos">
+                <a href="#">
+                    <img src="Logos/footer/Vector twiter.svg" alt="Twiter">
+                </a>
+                <a href="#">
+                    <img src="Logos/footer/Vector facebook.svg" alt="facebook">
+                </a>
+                <a href="#">
+                    <img src="Logos/footer/Vector.svg">
+                </a>
+
+            </div>
+        </div>
+    </footer>
+    <div>
+        <p id="copyRight">© 2022 FIGMA-LAND - by Ursu Maxim IS11Z</p>
+    </div>
 </body>
 
 </html>
